# svc-wallet

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml.txt
app/: hsm_client.py  main.py  queue_kafka.py  queue_redis.py
k8s/addons/: redis.yaml
k8s/base/: configmap.yaml  deployment.yaml  externalsecret.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  prometheusrule.yaml  secret.enc.yaml  service.yaml  servicemonitor.yaml  sops.yaml
k8s/overlays/dev/: configmap-patch.yaml  kustomization.yaml
k8s/overlays/prod/: configmap-patch.yaml  externalsecret-patch.yaml  kustomization.yaml
k8s/overlays/stg/: configmap-patch.yaml  externalsecret-patch.yaml  kustomization.yaml
mock-hsm/: Dockerfile  main.py
mock-hsm/k8s/: deployment.yaml
scripts/: sops-local.md
src/wallet/: config.py  consumer.py  db.py  main.py  metrics.py  models.sql  util.py
